--- a/coach/template/header.html
+++ b/coach/template/header.html
@@ -2,24 +2,72 @@
 <link href="./coach/firstPage/css/style.css" rel="stylesheet" type="text/css" media="all" />
 <link href="./coach/firstPage/css/myOwnCoach.css" rel="stylesheet" type="text/css"/>
 <!-- <link href='http://fonts.googleapis.com/css?family=Montserrat+Alternates' rel='stylesheet' type='text/css'> -->
-
+<div class="header_top headerPos"><!--header_top-->
+	<div class="container">
+		<div class="row">
+			<div class="col-sm-9">
+				<div class="contactinfo">
+					<ul class="nav nav-pills"  style="width: 193%;margin-left: -20%;">
+						<li><a href="javascript:void(0)"><i class="fa fa-phone"></i> +919910430419</a></li>
+						<li><a href="javascript:void(0)"><i class="fa fa-envelope"></i> bijay.iit12@gmail.com</a></li>
+						<li   ng-click = "global.openModal('template/modals/login.html', 'loginSignUp', undefined, 'extraLarge-Modal')"><a href="javascript:void(0)">Login/SignUp</a></li>
+				    	<li ng-click = "global.openModal('template/modals/login.html', 'loginSignUp', undefined, 'extraLarge-Modal', 'edit_website')"><a href="javascript:void(0)" >Edit Website</a></li>
+				    	<li ng-show = "coach.a === coach.aToMatch">
+			     			<a href="javascript:void(0)" style="opacity: 1;"  ng-click = "global.openModal('template/modals/popupMsg.html', 'smallInputCoach', 'link');" >
+			     				Add Link
+			     			</a>
+			     		</li>
+			     		<li ng-show = "coach.a === coach.aToMatch">
+			     			<!-- <button class="btn btn-primary" ng-click = "coach.saveJson()">
+				                <span>Save</span>
+				            </button> -->
+				            <a href="javascript:void(0)" style="opacity: 1;"  ng-click = "coach.saveJson()" >
+			     				Save Your Website
+			     			</a>
+			     		</li>
+			     		<li ng-show = "coach.a === coach.aToMatch">
+			     			<a href="javascript:void(0)" style="opacity: 1;"  ng-click = "coach.editThisPage = !coach.editThisPage" >
+			     				{{coach.editThisPage ? 'Done' : 'Start Editing'}}
+			     			</a>
+			     		</li>
+					</ul>
+				</div>
+			</div>
+			<div class="col-sm-3">
+				<div class="social-icons pull-right">
+					<ul class="nav navbar-nav socialPos">
+						<li><a href="javascript:void(0)"><i class="fa fa-facebook"></i></a></li>
+						<li><a href="javascript:void(0)"><i class="fa fa-twitter"></i></a></li>
+						<li><a href="javascript:void(0)"><i class="fa fa-linkedin"></i></a></li>
+						<!-- <li><a href="javascript:void(0)"><i class="fa fa-dribbble"></i></a></li> -->
+						<li><a href="javascript:void(0)"><i class="fa fa-google-plus"></i></a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
 <div class="header-bg">
 	<div class="wrap"> 
 		<div class="total-box">
 				<div class="total">
-					<div class="header_top">
+					<div class="header_top" style="margin-top: 6%;">
 				     	<div class="menu">
 				     		<ul>
 						    	<li ng-class="{'active': coach.tab === 'home'}" ng-click = "coach.tab = 'home'"><a href="javascript:void(0)" ui-sref="coach.home">Home</a></li>
-						    	<li   ng-click = "global.openModal('template/modals/login.html', 'loginSignUp', undefined, 'extraLarge-Modal')"><a href="javascript:void(0)">Login/SignUp</a></li>
-						    	<li ng-click = "global.openModal('template/modals/login.html', 'loginSignUp', undefined, 'extraLarge-Modal', 'edit_website')"><a href="javascript:void(0)" >Edit Website</a></li>
+						    	
 						    	<!-- <li ng-class="{'active': coach.tab === 'login'}" ng-click = "global.openModal('formBuilder/index.html', 'DemoController', undefined, 'extraLarge-Modal');coach.tab = 'login'"><a href="javascript:void(0)" ui-sref="coach.home">Form Builder</a></li> -->
-						    	<li ng-repeat="item in coach.linkArray" ng-if = "item.type !== 'static'" ng-class="{'active': coach.tab === item.link}" ng-click="coach.currentLinkClick = item;coach.tab = item.link"><a ui-sref="coach.about" name="{{item.link}}">{{item.link}}</a></li>
+						    	<li ng-repeat="item in coach.linkArray" ng-if = "item.type !== 'static'" ng-class="{'active': coach.tab === item.link}" ng-click="coach.currentLinkClick = item;coach.tab = item.link">
+						    		<a ui-sref="coach.about" name="{{item.link}}">{{item.link}}
+						    			<img name = "delete" class="imgResize" ng-show = "coach.a === coach.aToMatch && coach.editThisPage" src="./webdata/imgOwn/delete.png" alt="" ng-click="$event.stopPropagation();confirmClick() && coach.linkArray.splice($index, 1);"  confirm-click = "{{global.msg.confirm_delete}}">
+						    		</a>
+						    		
+						    	</li>
 						    	<div class="clear"></div>
 			     			</ul>
 				     	</div>
-				     	<ul class="follow_icon">
-				     		<li><a href="javascript:void(0)" style="opacity: 1;" ng-show = "coach.a === coach.aToMatch" ng-click = "global.openModal('template/modals/popupMsg.html', 'smallInputCoach', 'link');" ><img class="imgResizeBottom" src="./webdata/imgOwn/add.png" alt=""></a></li>
+				     	<ul class="follow_icon" ng-show = "coach.a === coach.aToMatch">
+				     		
 							<!-- <li><a href="javascript:void(0)" style="opacity: 1;"><img src="./coach/firstPage/images/fb.png" alt=""></a></li>
 							<li><a href="javascript:void(0)" style="opacity: 1;"><img src="./coach/firstPage/images/tw.png" alt=""></a></li>
 							<li><a href="javascript:void(0)" style="opacity: 1;"><img src="./coach/firstPage/images/rss.png" alt=""></a></li> -->
@@ -35,4 +83,11 @@
 			</div>	
 		</div>
 	 </div>
+</div>
+<!-- <button ng-show = "coach.a === coach.aToMatch" class="btn btn-primary" ng-click = "coach.homeFooterEdit = !coach.homeFooterEdit;editImg = coach.homeFooterEdit ? 'done.jpg' : 'edit.jpg';">
+    <span>{{coach.homeFooterEdit ? 'Done' : global.msg.label_edit_page}}</span>
+    <img class="imgResize" src="./webdata/imgOwn/{{editImg}}" altsrc = "./webdata/imgOwn/edit.jpg" check-image>
+</button> -->
+<div ng-show = "coach.key && coach.a === coach.aToMatch && coach.editThisPage" class="sample-show-hide summerNotePos">
+  	<summernote height = "70"  ng-model = "coach.objRef[coach.key]"></summernote>
 </div>
