--- a/template/modals/login.html
+++ b/template/modals/login.html
@@ -7,19 +7,26 @@
   <div class="row">
     <div class="col-sm-4" style="background-color: white; " ng-show = 'showLogin'>
             <h2>{{loginLabel}}</h2>
-            <table class="table">
-                <tbody>
-                     <tr  ng-repeat = "log in login" ng-switch on="log">
-                        <td>{{log}}</td>
-                        <td>
-                          <input production-qty class="form-control" type="{{log}}"  ng-switch-when='password' ng-model = "loginData[log]" placeholder=  "{{log}}">
-                          <input production-qty class="form-control" type="text" ng-switch-default ng-model = "loginData[log]" placeholder=  "{{log}}">
-                        </td>
-                    </tr>
-                </tbody>
-               
-            </table>
-             <input class="btn btn-sub" type="submit" name="login" ng-click = "loginFun('login')" value="Login">
+            <div class="form-group" ng-form name="loginForm" > 
+                <table class="table">
+                  <tbody>
+                       <tr ng-repeat = "log in constant.loginForm">
+                          <td>{{log.label}}</td>
+                          <td>
+                            <!-- production-qty its a directive  -->
+                            <!-- <input  class="form-control" type="{{log}}"  ng-switch-when='password' ng-model = "loginData[log]" placeholder=  "{{log}}">
+                            <input  class="form-control" type="text" ng-switch-default ng-model = "loginData[log]" placeholder=  "{{log}}"> -->
+                            <div ng-class="{'has-error': loginForm[log.key].$invalid, 'has-success': loginForm[log.key].$valid && loginForm[log.key].$dirty}">
+                                <input  class="form-control" type="{{log.type}}" required name = "{{log.key}}"  ng-model = "loginData[log.key]" placeholder=  "{{log.placeholder}}">
+                            </div>
+                            <span ng-show="loginForm[log.key].$error.required" class = "help-block help-block-error custom-date-error">{{global.msg.error_required}}</span>
+                          </td>
+                      </tr>
+                  </tbody>
+              </table>
+            </div>
+            
+             <input class="btn btn-sub" type="submit" ng-disabled = "loginForm.$invalid"  name="login" ng-click = "loginFun('login')" value="Login">
        
     </div>
     <div class="col-sm-4" style="background-color: white; " ng-show = 'selectOrg'>
@@ -37,102 +44,105 @@
                 </ul>
             </div>
     </div>
-     <h1>{{signUpLabel}}</h1><br/><br/>
-     <button class="btn btn-primary" ng-click = "showSignUp = !showSignUp"><span>{{showSignUp ? 'Done' : 'Sign Up'}}</span></button>
-    <div class="col-sm-8 padding-right" style="background-color: white;" ng-show = "showSignUp">
-        <div class="features_items">
-             
-               <div class="form-group" ng-form name="myForm" >
-               <table class="table">
-          <tbody>
-             <tr  ng-repeat = "log in constant.signUpForm" ng-switch on="log.key">
-                <td><h4>{{log.label}}</h4></td>
-                <td>
-                    
-                    <!-- <textarea rows="9" cols = "50" required name = "{{log}}" class=" form-control" ng-switch-when='msg' ng-model = "global.myInfo[log]" placeholder="About yourself"></textarea> -->
-                    <div ng-switch-when='Profession'>
+    <div ng-show = "extra !== 'edit_website'">
+        <h1>{{signUpLabel}}</h1><br/><br/>
+        <button class="btn btn-primary" ng-click = "showSignUp = !showSignUp"><span>{{showSignUp ? 'Done' : 'Sign Up'}}</span></button>
+        <div class="col-sm-8 padding-right" style="background-color: white;" ng-show = "showSignUp">
+            <div class="features_items">
+                 
+                   <div class="form-group" ng-form name="myForm" >
+                   <table class="table">
+              <tbody>
+                 <tr  ng-repeat = "log in constant.signUpForm" ng-switch on="log.key">
+                    <td><h4>{{log.label}}</h4></td>
+                    <td>
+                        
+                        <!-- <textarea rows="9" cols = "50" required name = "{{log}}" class=" form-control" ng-switch-when='msg' ng-model = "global.myInfo[log]" placeholder="About yourself"></textarea> -->
+                        <div ng-switch-when='Profession'>
+                          
+                            <div style="position:relative;">
+                                <input  type="text"   class="form-control" placeholder="Type Your Profession" ng-model="searchProfession" ng-focus = "hideSearchBox['profession'] = false;global.itemsLimit = 50"/>
+                                <div class="searchBox loginProfessionSearchBox" ng-hide="hideSearchBox['profession'] || !global.professionList.length" directive-when-scrolled="loadMore()">
+                                  <p><button class = "btn-default pull-right" ng-click = "closeSearchBox('profession')">close<img src="/webdata/imgOwn/delete.png" style="width: 18px;height: 18px;pointer: cursor" ></button></p>
+                                    <ul>
+                                        <li    ng-repeat="list in global.professionList | filter: searchProfession  |limitTo: global.itemsLimit track by $index " ng-click = "setProfession(list)">
+                                          <span  style="font-weight:bold;">{{list}}</span>
+                                          <img src="/webdata/imgOwn/done.jpg" ng-show = "global.completeFilter.Profession.indexOf(list) >= 0" style="width: 18px;height: 18px;pointer: cursor"  class = "pull-right" >
+                                        </li>
+                                    </ul>
+                                </div>
                       
-                        <div style="position:relative;">
-                            <input  type="text"   class="form-control" placeholder="Type Your Profession" ng-model="searchProfession" ng-focus = "hideSearchBox['profession'] = false;global.itemsLimit = 50"/>
-                            <div class="searchBox loginProfessionSearchBox" ng-hide="hideSearchBox['profession'] || !global.professionList.length" directive-when-scrolled="loadMore()">
-                              <p><button class = "btn-default pull-right" ng-click = "closeSearchBox('profession')">close<img src="/webdata/imgOwn/delete.png" style="width: 18px;height: 18px;pointer: cursor" ></button></p>
-                                <ul>
-                                    <li    ng-repeat="list in global.professionList | filter: searchProfession  |limitTo: global.itemsLimit track by $index " ng-click = "setProfession(list)">
-                                      <span  style="font-weight:bold;">{{list}}</span>
-                                      <img src="/webdata/imgOwn/done.jpg" ng-show = "global.completeFilter.Profession.indexOf(list) >= 0" style="width: 18px;height: 18px;pointer: cursor"  class = "pull-right" >
-                                    </li>
+                              </div>
+                              <div class="filters" style="display: block;">
+                            <div class="filter-list" >
+                               
+                                <ul class="group" >
+                                  <li class="heading" ng-show = "global.completeFilter['Profession'].length">
+                                      <img src="/webdata/imgOwn/delete.png" style="width: 18px;height: 18px;pointer: cursor" ng-click = "global.completeFilter['Profession'] = []" >
+                                      <span>Profession:</span><i class="i-cross-sky-blue"></i>
+                                  </li>
+                                  <li ng-repeat = "innerItem in global.completeFilter['Profession']">
+                                      <span>{{innerItem}}</span><!--  <i class="fa fa-close iconClose"></i> --> 
+                                      <img src="/webdata/imgOwn/delete.png" style="width: 18px;height: 18px;pointer: cursor" ng-click = "global.completeFilter['Profession'].splice(global.completeFilter['Profession'].indexOf(innerItem), 1)">
+                                  </li>
                                 </ul>
+                              </div>
                             </div>
-                  
-                          </div>
+                        </div>
+                        <div ng-switch-when='Skills'>
                           <div class="filters" style="display: block;">
-                        <div class="filter-list" >
-                           
-                            <ul class="group" >
-                              <li class="heading" ng-show = "global.completeFilter['Profession'].length">
-                                  <img src="/webdata/imgOwn/delete.png" style="width: 18px;height: 18px;pointer: cursor" ng-click = "global.completeFilter['Profession'] = []" >
-                                  <span>Profession:</span><i class="i-cross-sky-blue"></i>
-                              </li>
-                              <li ng-repeat = "innerItem in global.completeFilter['Profession']">
-                                  <span>{{innerItem}}</span><!--  <i class="fa fa-close iconClose"></i> --> 
-                                  <img src="/webdata/imgOwn/delete.png" style="width: 18px;height: 18px;pointer: cursor" ng-click = "global.completeFilter['Profession'].splice(global.completeFilter['Profession'].indexOf(innerItem), 1)">
-                              </li>
-                            </ul>
-                          </div>
-                        </div>
-                    </div>
-                    <div ng-switch-when='Skills'>
-                      <div class="filters" style="display: block;">
-                        <div class="filter-list" >
-                            
-                            <ul class="group" >
-                              <li class="heading" ng-show = "global.completeFilter['Skills'].length">
-                                  <img src="/webdata/imgOwn/delete.png" style="width: 18px;height: 18px;pointer: cursor" ng-click = "global.completeFilter['Skills'] = []" >
-                                  <span>Skills:</span><i class="i-cross-sky-blue"></i>
-                              </li>
-                              <li ng-repeat = "innerItem in global.completeFilter['Skills']">
-                                  <span>{{innerItem}}</span><!--  <i class="fa fa-close iconClose"></i> --> 
-                                  <img src="/webdata/imgOwn/delete.png" style="width: 18px;height: 18px;pointer: cursor" ng-click = "global.completeFilter['Skills'].splice(global.completeFilter['Skills'].indexOf(innerItem), 1)">
-                              </li>
-                            </ul>
-                          </div>
-                        </div>
-                        <ul class="nav nav-pills nav-stacked">
-                            <input  type="text"   class="form-control" placeholder="Skills" ng-model="searchSkills" ng-focus = "hideSearchBox['skills'] = false;global.itemsLimit = 50" />
-                            <div class="searchBox loginSkillsSearchBox" ng-hide="hideSearchBox['skills'] || !global.skillsDetail.length" directive-when-scrolled="loadMore()">
-                              <button class = "btn-default pull-right" ng-click = "closeSearchBox('skills')">Close<img src="/webdata/imgOwn/delete.png" style="width: 18px;height: 18px;pointer: cursor" ></button>
-                                <ul>
-                                    <li    ng-repeat="skill in global.skillsDetail | filter: searchSkills |limitTo: global.itemsLimit track by $index " ng-click = "setSkills(skill)">
-                                      <span  style="font-weight:bold;">{{skill}}</span>
-                                      <img src="/webdata/imgOwn/done.jpg" ng-show = "global.completeFilter.Skills.indexOf(skill) >= 0" style="width: 18px;height: 18px;pointer: cursor"  class = "pull-right" >
-                                    </li>
+                            <div class="filter-list" >
+                                
+                                <ul class="group" >
+                                  <li class="heading" ng-show = "global.completeFilter['Skills'].length">
+                                      <img src="/webdata/imgOwn/delete.png" style="width: 18px;height: 18px;pointer: cursor" ng-click = "global.completeFilter['Skills'] = []" >
+                                      <span>Skills:</span><i class="i-cross-sky-blue"></i>
+                                  </li>
+                                  <li ng-repeat = "innerItem in global.completeFilter['Skills']">
+                                      <span>{{innerItem}}</span><!--  <i class="fa fa-close iconClose"></i> --> 
+                                      <img src="/webdata/imgOwn/delete.png" style="width: 18px;height: 18px;pointer: cursor" ng-click = "global.completeFilter['Skills'].splice(global.completeFilter['Skills'].indexOf(innerItem), 1)">
+                                  </li>
                                 </ul>
+                              </div>
                             </div>
-                  
-                  
-                          </ul>
-                    </div>
-                    <div ng-switch-when="sex">
-                      <label class="checkbox-inline"><input checked type="checkbox" ng-init = "global.myInfo.sex = male = true" ng-change = "female = !male;global.myInfo.sex = male" ng-model = "male" value="">Male</label>
-                      <label class="checkbox-inline"><input type="checkbox" ng-change = "male = !female" ng-model = "female" value="">Female</label>
-                    </div>
-                    <div ng-switch-default  ng-class="{'has-error': myForm[log.key].$invalid, 'has-success': myForm[log.key].$valid && myForm[log.key].$dirty}">
-                      <input  class="form-control" type="{{log.type ? log.type : 'text'}}"  required name = "{{log.key}}"  ng-model = "global.myInfo[log.key]" placeholder=  "{{log.placeholder}}" ng-maxlength="50">
-                    </div>
-                    
-                    <span class="error help-block help-block-error custom-date-error" ng-show="myForm[log.key].$error.maxlength">{{global.msg.error_length_greater_50}}</span>
-                    <span ng-show="myForm[log.key].$error.required" class = "help-block help-block-error custom-date-error">{{global.msg.error_required}}</span>
-                </td>
-            </tr>
-      
-          </tbody>
-           
-        </table>
-        </div>
-        <input class="btn btn-sub" ng-disabled = "myForm.$invalid"  type="submit" name="signup" ng-click = "loginFun(selectOrg ? 'coach' : 'signUp')" value="{{showLogin || selectOrg ? 'Sign Up': 'Update'}}">
-        </div>
+                            <ul class="nav nav-pills nav-stacked">
+                                <input  type="text"   class="form-control" placeholder="Skills" ng-model="searchSkills" ng-focus = "hideSearchBox['skills'] = false;global.itemsLimit = 50" />
+                                <div class="searchBox loginSkillsSearchBox" ng-hide="hideSearchBox['skills'] || !global.skillsDetail.length" directive-when-scrolled="loadMore()">
+                                  <button class = "btn-default pull-right" ng-click = "closeSearchBox('skills')">Close<img src="/webdata/imgOwn/delete.png" style="width: 18px;height: 18px;pointer: cursor" ></button>
+                                    <ul>
+                                        <li    ng-repeat="skill in global.skillsDetail | filter: searchSkills |limitTo: global.itemsLimit track by $index " ng-click = "setSkills(skill)">
+                                          <span  style="font-weight:bold;">{{skill}}</span>
+                                          <img src="/webdata/imgOwn/done.jpg" ng-show = "global.completeFilter.Skills.indexOf(skill) >= 0" style="width: 18px;height: 18px;pointer: cursor"  class = "pull-right" >
+                                        </li>
+                                    </ul>
+                                </div>
+                      
+                      
+                              </ul>
+                        </div>
+                        <div ng-switch-when="sex">
+                          <label class="checkbox-inline"><input checked type="checkbox" ng-init = "global.myInfo.sex = male = true" ng-change = "female = !male;global.myInfo.sex = male" ng-model = "male" value="">Male</label>
+                          <label class="checkbox-inline"><input type="checkbox" ng-change = "male = !female" ng-model = "female" value="">Female</label>
+                        </div>
+                        <div ng-switch-default  ng-class="{'has-error': myForm[log.key].$invalid, 'has-success': myForm[log.key].$valid && myForm[log.key].$dirty}">
+                          <input  class="form-control" type="{{log.type ? log.type : 'text'}}"  required name = "{{log.key}}"  ng-model = "global.myInfo[log.key]" placeholder=  "{{log.placeholder}}" ng-maxlength="50">
+                        </div>
+                        
+                        <span class="error help-block help-block-error custom-date-error" ng-show="myForm[log.key].$error.maxlength">{{global.msg.error_length_greater_50}}</span>
+                        <span ng-show="myForm[log.key].$error.required" class = "help-block help-block-error custom-date-error">{{global.msg.error_required}}</span>
+                    </td>
+                </tr>
+          
+              </tbody>
+               
+            </table>
+            </div>
+            <input class="btn btn-sub" ng-disabled = "myForm.$invalid"  type="submit" name="signup" ng-click = "loginFun(selectOrg ? 'coach' : 'signUp')" value="{{showLogin || selectOrg ? 'Sign Up': 'Update'}}">
+            </div>
 
+        </div>
     </div>
+     
 </div>
 <div class="footerClose">
     <button type="button" ng-hide = "selectOrg" class="btn btn-default" ng-click="close()" data-dismiss="modal">Close</button>
