--- a/coach/template/header.html
+++ b/coach/template/header.html
@@ -88,6 +88,6 @@
     <span>{{coach.homeFooterEdit ? 'Done' : global.msg.label_edit_page}}</span>
     <img class="imgResize" src="./webdata/imgOwn/{{editImg}}" altsrc = "./webdata/imgOwn/edit.jpg" check-image>
 </button> -->
-<div ng-show = "coach.key && coach.a === coach.aToMatch && coach.editThisPage" class="sample-show-hide summerNotePos">
+<!-- <div ng-show = "coach.key && coach.a === coach.aToMatch && coach.editThisPage" class="sample-show-hide summerNotePos">
   	<summernote height = "70"  ng-model = "coach.objRef[coach.key]"></summernote>
-</div>
+</div> -->
