--- a/coach/template/modals/editShow.html
+++ b/coach/template/modals/editShow.html
@@ -21,9 +21,9 @@
           
           <div class="footerClose">
                <!--  <button type="button" class="btn btn-default" ng-click="close()" data-dismiss="modal">Close</button> -->
-                <img class="imageOnly" ng-click="close()" src="./coach/firstPage/imgOwn/close.png" alt="">
-                <img class="imageOnly" ng-click="reset()" src="./coach/firstPage/imgOwn/reset.jpg" alt="">
-                <img class="imageOnly" ng-click="save()" src="./coach/firstPage/imgOwn/save.jpg" alt="">
+                <img class="imageOnly" ng-click="close()" src="./webdata/imgOwn/close.jpg" alt="">
+                <img class="imageOnly" ng-click="reset()" src="./webdata/imgOwn/reset.jpg" alt="">
+                <img class="imageOnly" ng-click="save()" src="./webdata/imgOwn/save.jpg" alt="">
          
          
             </div>
