--- a/coach/template/footer.html
+++ b/coach/template/footer.html
@@ -3,54 +3,81 @@
 		<div class="wrap">
 			<div class="content-bottom">
 				<div class="col_1_of_3 span_1_of_3" ng-init = "item = coach.repeatAll['footer'].welcomeToOurCentre">
-					<h3>{{coach.repeatAll['footer'].welcomeToOurCentre.header}}</h3>
-					<p class="desc2"><strong>{{coach.repeatAll['footer'].welcomeToOurCentre.nextHeader}}.</strong></p>
-					<p class="desc1">{{coach.repeatAll['footer'].welcomeToOurCentre.content}}
-						<!-- <img name = "edit" ng-click = "global.openModal('coach/template/modals/editShow.html', 'editShowCoachCtrl', coach.repeatAll['footer'].welcomeToOurCentre, 'extraLarge-Modal')" class="imgResizeBottom" src="./webdata/imgOwn/edit.jpg" alt=""> -->
-						<img name = "edit" ng-click = "coach.setEditLink(coach.currentLinkClick, 'desc', hideShow.body)" class="imgResizeBottom" src="./webdata/imgOwn/edit.jpg" ng-show = "coach.editThisPage && coach.a === coach.aToMatch" alt="">
+					<h3 ng-bind-html="coach.repeatAll['footer'].welcomeToOurCentre.header | to_trusted">
+						
+					</h3>
+					<img ng-show = "coach.editThisPage && coach.a === coach.aToMatch" class="imgResizeBottom" name = "edit" ng-click = "coach.setEditLink(coach.repeatAll['footer'].welcomeToOurCentre, 'header')" src="./webdata/imgOwn/edit.jpg" alt="">
+					<p class="desc2">
+						<strong ng-bind-html="coach.repeatAll['footer'].welcomeToOurCentre.nextHeader | to_trusted">
+							
+						</strong>
+						<img ng-show = "coach.editThisPage && coach.a === coach.aToMatch" class="imgResizeBottom" name = "edit" ng-click = "coach.setEditLink(coach.repeatAll['footer'].welcomeToOurCentre, 'nextHeader')" src="./webdata/imgOwn/edit.jpg" alt="">
 					</p>
-					<p class="desc1" ng-hide="!readMore">{{coach.repeatAll['footer'].welcomeToOurCentre.readMore}} </p>
+					<p class="desc1" ng-bind-html="coach.repeatAll['footer'].welcomeToOurCentre.content | to_trusted">
+						
+					</p>
+					<img ng-show = "coach.editThisPage && coach.a === coach.aToMatch" class="imgResizeBottom" name = "edit" ng-click = "coach.setEditLink(coach.repeatAll['footer'].welcomeToOurCentre, 'content')" src="./webdata/imgOwn/edit.jpg" alt="">
+					<p class="desc1" ng-hide="!readMore" ng-bind-html="coach.repeatAll['footer'].welcomeToOurCentre.readMore | to_trusted">
+						
+					</p>
+					<img ng-show = "coach.editThisPage && coach.a === coach.aToMatch && readMore" class="imgResizeBottom" name = "edit" ng-click = "coach.setEditLink(coach.repeatAll['footer'].welcomeToOurCentre, 'readMore')" src="./webdata/imgOwn/edit.jpg" alt="">
 					<button class="btn btn-primary" ng-click = "readMore = !readMore"><span>{{readMore ? 'hide': 'Read More'}}</span><img class="imgResize" src="./webdata/imgOwn/more_arrow.png" alt=""></button>
 
 				</div>
 				<div class="col_1_of_3 span_1_of_3" ng-init = "coach.limit = 4">
-					<h3>Teaching Support</h3>
+					<h3  ng-bind-html="coach.repeatAll['footer'].teachingSupport.header | to_trusted"> 
+						
+					</h3>
+					<img ng-show = "coach.editThisPage && coach.a === coach.aToMatch" class="imgResizeBottom" name = "edit" ng-click = "coach.setEditLink(coach.repeatAll['footer'].teachingSupport, 'header')" src="./webdata/imgOwn/edit.jpg" alt="">
 					<ul class="dishes_list">
 						<li ng-repeat = "item in coach.repeatAll['footer'].teachingSupport.innerItem | limitTo: coach.limit track by $index" >
-							<a href="javascript:void(0)"ng-click="support = !support">{{item.link}}</a>
-							<p class="desc1" ng-hide="!support">{{item.content}}</p>
-							<div ng-show = "coach.editThisPage && coach.a === coach.aToMatch">
-								<img name = "edit" ng-click = "global.openModal('coach/template/modals/editShow.html', 'editShowCoachCtrl', item, 'extraLarge-Modal')" class="imgResize" src="./webdata/imgOwn/edit.jpg" alt="">
-								<img name = "delete" class="imgResize" src="./webdata/imgOwn/delete.png" alt="" ng-click="confirmClick() && coach.repeatAll['footer'].teachingSupport.innerItem.splice($index, 1);" confirm-click>
-							</div>
+							<a href="javascript:void(0)"ng-click="support = !support" ng-bind-html="item.link | to_trusted">
+								
+							</a>
+							<img ng-show = "coach.editThisPage && coach.a === coach.aToMatch" class="imgResizeBottom" name = "edit" ng-click = "coach.setEditLink(item, 'link')" src="./webdata/imgOwn/edit.jpg" alt="">
+							<p class="desc1" ng-hide="!support" ng-bind-html="item.content | to_trusted">
+								
+							</p>
+							<img ng-show = "coach.editThisPage && coach.a === coach.aToMatch && support" class="imgResizeBottom" name = "edit" ng-click = "coach.setEditLink(item, 'content')" src="./webdata/imgOwn/edit.jpg" alt="">
+							
+							<img name = "delete"  ng-show = "coach.editThisPage && coach.a === coach.aToMatch" class="imgResize" src="./webdata/imgOwn/delete.png" alt="" ng-click="confirmClick() && coach.repeatAll['footer'].teachingSupport.innerItem.splice($index, 1);" confirm-click>
 							
 						</li>
 						<div class="clear"> </div>
 					</ul>
 							<img class="imgResizeBottom" name = "up"  ng-click = "reduce('limit')" src="./webdata/imgOwn/up.jpg" alt="">
 							<img class="imgResizeBottom" name = "down"  ng-click = "loadMore('limit', coach.repeatAll['footer'].teachingSupport.innerItem.length)" src="./webdata/imgOwn/down.jpg" alt="">
-							<img ng-show = "coach.editThisPage && coach.a === coach.aToMatch" class="imgResizeBottom" style="width:97px"  ng-click = "global.openModal('coach/template/modals/editShow.html', 'editShowCoachCtrl', 'teachingSupport_footer', 'extraLarge-Modal')" name="addNew" src="./webdata/imgOwn/addNew.png" alt="">
+							<!-- <img ng-show = "coach.editThisPage && coach.a === coach.aToMatch" class="imgResizeBottom" style="width:97px"  ng-click = "global.openModal('coach/template/modals/editShow.html', 'editShowCoachCtrl', 'teachingSupport_footer', 'extraLarge-Modal')" name="addNew" src="./webdata/imgOwn/addNew.png" alt=""> -->
+							<img ng-show = "coach.editThisPage && coach.a === coach.aToMatch" class="imgResizeBottom" style="width:97px"  ng-click = "coach.addNewListItem(coach.repeatAll['footer'].teachingSupport.innerItem, 'footerSecondInnerItem')" name="addNew" src="./webdata/imgOwn/addNew.png" alt="">
 				</div>
 				<div class="col_1_of_3 span_1_of_3" ng-init = "coach.limit1 = 4">
-					<h3>Latest News</h3>
+					<h3 ng-bind-html="coach.repeatAll['footer'].latestNews.header | to_trusted">
+						
+					</h3>
+					<img ng-show = "coach.editThisPage && coach.a === coach.aToMatch" class="imgResizeBottom" name = "edit" ng-click = "coach.setEditLink(coach.repeatAll['footer'].latestNews, 'header')" src="./webdata/imgOwn/edit.jpg" alt="">
 					<div class="latest-news-grid" ng-repeat = "item in coach.repeatAll['footer'].latestNews.innerItem | limitTo: coach.limit1 track by $index">
 						<div class="latest-news-pic">
 							<img altsrc = "./webdata/imgOwn/news.png" ng-src="{{item.imgSrc}}" title="imag-name" check-image>
 						</div>
 						<div class="latest-news-info">
-							<a href="javascript:void(0)" ng-click = "global.openModal('coach/template/modals/display.html', 'displayCoachCtrl', item, 'extraLarge-Modal', 'News')">{{item.date}}</a>
-							<div ng-show = "coach.editThisPage && coach.a === coach.aToMatch">
-								<img name = "edit" ng-click = "global.openModal('coach/template/modals/editShow.html', 'editShowCoachCtrl', item, 'extraLarge-Modal')" class="imgResize" src="./webdata/imgOwn/edit.jpg" alt="">
-								<img name = "delete" class="imgResize" src="./webdata/imgOwn/delete.png" alt="" ng-click="confirmClick() && coach.repeatAll['footer'].latestNews.content.splice($index, 1);" msg = "label_msg" confirm-click>
-							</div>
+							<a href="javascript:void(0)" ng-click = "global.openModal('coach/template/modals/display.html', 'displayCoachCtrl', item, 'extraLarge-Modal', 'News')" ng-bind-html="item.date | to_trusted">
+								
+							</a>
+							<img ng-show = "coach.editThisPage && coach.a === coach.aToMatch" class="imgResizeBottom" name = "edit" ng-click = "coach.setEditLink(item, 'date')" src="./webdata/imgOwn/edit.jpg" alt="">
+							<img ng-show = "coach.editThisPage && coach.a === coach.aToMatch" name = "delete" class="imgResize" src="./webdata/imgOwn/delete.png" alt="" ng-click="confirmClick() && coach.repeatAll['footer'].latestNews.content.splice($index, 1);" msg = "label_msg" confirm-click>
 							
-							<p class="desc1">{{item.newsHeader}}</p>
+							
+							<p class="desc1" ng-bind-html="item.newsHeader | to_trusted">
+								
+							</p>
+							<img ng-show = "coach.editThisPage && coach.a === coach.aToMatch" class="imgResizeBottom" name = "edit" ng-click = "coach.setEditLink(item, 'newsHeader')" src="./webdata/imgOwn/edit.jpg" alt="">
 						</div>
 						<div class="clear"> </div>
 					</div>
 					<img class="imgResizeBottom" name = "up"  ng-click = "reduce('limit1')" src="./webdata/imgOwn/up.jpg" alt="">
 					<img class="imgResizeBottom" name = "down"  ng-click = "loadMore('limit1', coach.repeatAll['footer'].latestNews.innerItem.length)" src="./webdata/imgOwn/down.jpg" alt="">
-					<img ng-show = "coach.editThisPage && coach.a === coach.aToMatch" class="imgResizeBottom"  style="width:97px"  ng-click = "global.openModal('coach/template/modals/editShow.html', 'editShowCoachCtrl', 'latestNews_footer', 'extraLarge-Modal')" name="addNew" src="./webdata/imgOwn/addNew.png" alt="">
+					<!-- <img ng-show = "coach.editThisPage && coach.a === coach.aToMatch" class="imgResizeBottom"  style="width:97px"  ng-click = "global.openModal('coach/template/modals/editShow.html', 'editShowCoachCtrl', 'latestNews_footer', 'extraLarge-Modal')" name="addNew" src="./webdata/imgOwn/addNew.png" alt=""> -->
+					<img ng-show = "coach.editThisPage && coach.a === coach.aToMatch" class="imgResizeBottom" style="width:97px"  ng-click = "coach.addNewListItem(coach.repeatAll['footer'].latestNews.innerItem, 'footerThirdInnerItem')" name="addNew" src="./webdata/imgOwn/addNew.png" alt="">
 					<div class="clear"></div> 
 				</div>
 			</div>
