changes in inner page

--- a/template/listOfPeople.html
+++ b/template/listOfPeople.html
@@ -5,7 +5,7 @@
 				<div class="product-image-wrapper">
 					<div class="single-products">
 						<div class="productinfo text-center">
-							<img check-image ng-src="images/peopleList/{{list.id}}" name = "{{list.id}}" class = "profileImage imgHeight" alt="checkImage" />
+							<img check-image altsrc = "./webdata/imgOwn/noImage.jpg" ng-src="images/peopleList/{{list.id}}" name = "{{list.id}}" class = "profileImage" alt="checkImage" />
 							<h2><p>Name - {{list.name}}</p></h2>
 							<h2><p>Chat</p></h2>
 							<!-- <h2><p>Show Profile</p></h2> -->
@@ -23,12 +23,12 @@
 							</div>
 						</div>
 					</div>
-					<div class="choose">
+					<!-- <div class="choose">
 						<ul class="nav nav-pills nav-justified">
 							<li><a href=""><i class="fa fa-plus-square"></i>{{list.contact_No}}</a></li>
 							<li><a href=""><i class="fa fa-plus-square"></i>{{list.email}}</a></li>
 						</ul>
-					</div>
+					</div> -->
 				</div>
 			</div>
 			
