--- a/template/modals/showProfile.html
+++ b/template/modals/showProfile.html
@@ -6,7 +6,7 @@
       </div>
       <div class="modal-body">
         <div class="row">
-           <img ng-src="/images/peopleList/{{profile.id}}" class="img-rounded" alt="Cinque Terre" width="304" height="236">
+           <img check-image ng-src="/images/peopleList/{{profile.id}}" class="img-rounded" altsrc = "./webdata/imgOwn/noImage.jpg" alt="Cinque Terre" width="304" height="236">
           
         </div>
           Name -  <span >{{profile.name}}</span><br/><br/>
