--- a/css/myOwn.css
+++ b/css/myOwn.css
@@ -200,11 +200,11 @@ width: 44%;
 }
 .profileImage {
     border-radius: 80px;
-    width: 40%;
+    width: 41%;
     height: 109px;
 }
 .imgHeight {
-    height: 150px;
+    height: 206px;
 }
 .chatLeft {
     width: 100%;
@@ -255,4 +255,12 @@ width: 44%;
 .imgBanner {
     width: 100%;
     height: 382px;
+}
+.profileLogo {
+    width: 10%;
+}
+.imgResize {
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
 }
